# C_CPP_Project

./: .gitignore
Job_2/Task_4/: CMakeLists.txt  run.sh
Job_2/Task_4/src/string_processor/: string_processor.c  string_processor.h
Job_2/Task_4/src/sumnumber/: sumnumber.c
Job_3/geometry/:  README.md  CMakeLists.txt
Job_3/geometry/src/: main.cpp
Job_3/geometry/src/figure/: figure.cpp  figure.h
Job_3/geometry/src/point/: point.cpp  point.h
Job_3/geometry/tests/: test_figure.cpp  test_point.cpp
Job_5/university/: CMakeLists.txt
Job_5/university/application/: CMakeLists.txt
Job_5/university/application/include/: banking_app.hpp
Job_5/university/application/source/: banking_app.cpp  main.cpp
Job_5/university/config_examples/: default.json  filestorage.json  ui.json
Job_5/university/controller/: CMakeLists.txt
Job_5/university/controller/abstract_controller/: CMakeLists.txt
Job_5/university/controller/abstract_controller/include/: controller.hpp
Job_5/university/controller/text_ui_controller/: CMakeLists.txt
Job_5/university/controller/text_ui_controller/include/: text_ui_controller.hpp
Job_5/university/controller/text_ui_controller/source/: text_ui_controller.cpp
Job_5/university/model/: CMakeLists.txt
Job_5/university/model/account/: CMakeLists.txt
Job_5/university/model/account/include/: account.hpp
Job_5/university/model/account_types/: CMakeLists.txt
Job_5/university/model/account_types/credit_account/: CMakeLists.txt
Job_5/university/model/account_types/credit_account/include/: credit_account.hpp
Job_5/university/model/account_types/credit_account/source/: credit_account.cpp
Job_5/university/model/account_types/debit_account/: CMakeLists.txt
Job_5/university/model/account_types/debit_account/include/: debit_account.hpp
Job_5/university/model/account_types/debit_account/source/: debit_account.cpp
Job_5/university/model/account_types/saving_account/: CMakeLists.txt
Job_5/university/model/account_types/saving_account/include/: saving_account.hpp
Job_5/university/model/account_types/saving_account/source/: saving_account.cpp
Job_5/university/repository/: CMakeLists.txt
Job_5/university/repository/account_repository/: CMakeLists.txt
Job_5/university/repository/account_repository/abstract_account_repository/: CMakeLists.txt
Job_5/university/repository/account_repository/abstract_account_repository/include/: account_repository.hpp
Job_5/university/repository/account_repository/in_memory_account_repository/: CMakeLists.txt
Job_5/university/repository/account_repository/in_memory_account_repository/include/: in_memory_account_repository.hpp
Job_5/university/repository/account_repository/thread_safe_account_repository/: CMakeLists.txt
Job_5/university/service/: CMakeLists.txt
Job_5/university/service/bank/: CMakeLists.txt
Job_5/university/service/bank/include/: banking_service.hpp
Job_5/university/service/bank/source/: banking_service.cpp
Job_5/university/view/: CMakeLists.txt
Job_5/university/view/abstract_view/: CMakeLists.txt
Job_5/university/view/abstract_view/include/: view.hpp
Job_5/university/view/text_ui_view/: CMakeLists.txt
Job_5/university/view/text_ui_view/include/: text_ui_view.hpp
Job_5/university/view/text_ui_view/source/: text_ui_view.cpp
Job_END/smart_home/: CMakeLists.txt  README.md  run.sh
Job_END/smart_home/application/: CMakeLists.txt
Job_END/smart_home/application/source/: main.cpp
Job_END/smart_home/controller/: CMakeLists.txt
Job_END/smart_home/controller/device_controller/: CMakeLists.txt
Job_END/smart_home/controller/device_controller/include/: device_controller.hpp
Job_END/smart_home/controller/device_controller/source/: device_controller.cpp
Job_END/smart_home/controller/smart_home_controller/: CMakeLists.txt
Job_END/smart_home/controller/smart_home_controller/include/: smart_home_controller.hpp
Job_END/smart_home/controller/smart_home_controller/source/: smart_home_controller.cpp
Job_END/smart_home/model/: CMakeLists.txt
Job_END/smart_home/model/active_device/: CMakeLists.txt
Job_END/smart_home/model/active_device/include/: active_device.hpp
Job_END/smart_home/model/active_device/source/: active_device.cpp
Job_END/smart_home/model/base/: CMakeLists.txt
Job_END/smart_home/model/base/iactive_device/: CMakeLists.txt
Job_END/smart_home/model/base/iactive_device/include/: iactive_device.hpp
Job_END/smart_home/model/base/idevice/: CMakeLists.txt
Job_END/smart_home/model/base/isensor_device/: CMakeLists.txt
Job_END/smart_home/model/device/: CMakeLists.txt
Job_END/smart_home/model/device/include/: device.hpp
Job_END/smart_home/model/device/source/: device.cpp
Job_END/smart_home/model/devices/: CMakeLists.txt
Job_END/smart_home/model/devices/air_conditioner/: CMakeLists.txt
Job_END/smart_home/model/devices/leak_sensor/: CMakeLists.txt
Job_END/smart_home/model/devices/smart_bulb/: CMakeLists.txt
Job_END/smart_home/model/devices/smart_kettle/: CMakeLists.txt
Job_END/smart_home/model/devices/thermometer/: CMakeLists.txt
Job_END/smart_home/model/room/: CMakeLists.txt
Job_END/smart_home/model/room/include/: room.hpp
Job_END/smart_home/model/room/source/: room.cpp
Job_END/smart_home/model/sensor_device/include/: sensor_device.hpp
Job_END/smart_home/model/smart_home/: CMakeLists.txt
Job_END/smart_home/model/smart_home/include/: smart_home.hpp
Job_END/smart_home/model/smart_home/source/: smart_home.cpp
Job_END/smart_home/model/smart_speaker/: CMakeLists.txt
Job_END/smart_home/model/smart_speaker/include/: smart_speaker.hpp
Job_END/smart_home/model/smart_speaker/source/: smart_speaker.cpp
Job_END/smart_home/view/: CMakeLists.txt
Job_END/smart_home/view/cli_view/: CMakeLists.txt
Job_END/smart_home/view/cli_view/include/: cli_view.hpp
Job_END/smart_home/view/cli_view/source/: cli_view.cpp
Job_END/smart_home/view/smart_home_cli/: CMakeLists.txt
Job_END/smart_home/view/smart_home_cli/include/: smart_home_cli.hpp
Job_END/smart_home/view/smart_home_cli/source/: smart_home_cli.cpp
Web/: index.html  index.js  (+3 more)
(+31 files in other folders)
