cmake_minimum_required(VERSION 3.16)
project(smart_home_controller)

set(CMAKE_CXX_STANDARD 23)

add_library(smart_home_controller STATIC source/smart_home_controller.cpp)

target_include_directories(smart_home_controller PUBLIC include)

target_link_libraries(smart_home_controller PUBLIC isensor_device iactive_device smart_home smart_speaker device_controller)